# orthoai2

./: README.md  pyproject.toml
docs/: architecture.md
orthovision_ai/: __init__.py
orthovision_ai/api/: app.py
orthovision_ai/cli/: main.py
orthovision_ai/config/: defaults.json  settings.py
orthovision_ai/dataset_builder/: manager.py
orthovision_ai/integration/: slicer_bridge.py
orthovision_ai/modules/: dicom_engine.py  fracture_analysis.py  healing_tracker.py  implant_recommendation.py  measurements.py  preprocessing.py  reconstruction3d.py  segmentation.py
orthovision_ai/pipeline/: orchestrator.py
orthovision_ai/planning/: surgical_planning.py
orthovision_ai/reporting/: report_generator.py
orthovision_ai/utils/: io.py  types.py
orthovision_ai/visualization/: viewer.py
tests/: test_config_and_dataset.py  test_pipeline.py
