[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthovision-ai"
version = "0.1.0"
description = "ORTHOVISION AI - Advanced Orthopedic Imaging Analysis Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ORTHOVISION AI Team"}]
dependencies = [
]

[project.optional-dependencies]
imaging = ["pydicom>=2.4", "SimpleITK>=2.3", "nibabel>=5.1", "vtk>=9.2", "open3d>=0.18"]
ai = ["torch>=2.2", "monai>=1.3"]
ui = ["PyQt6>=6.6", "fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["orthovision_ai*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

